# homecontrol

Arduino/ArduinoISP/: ArduinoISP.ino
Arduino/PCB/: Board.skp  Mainboard.txt  moerhouder.skp
Arduino/PCB/MainBoard/: 744777910.lbr  JS1-12V-F.lbr  Mainboard.brd  Mainboard.lbr  Mainboard.sch  Mainboard.skp  MainboardComponents.lbr  R-78B5.0-2.0.lbr  ULN2803ADW.lbr
Arduino/PCB/MainboardControl/: MainboardControl.sln
Arduino/PCB/MainboardCpu/: MainboardCpu.ino
Arduino/PCB/TempSensor/: Components.lbr  IQD-Frequency-Products.lbr  Sensor3D.skp  TempSensor.brd  TempSensor.dru  TempSensor.pro  TempSensor.rules  TempSensor.sch  eagle.epf  tft_1.8_1.44_oled_0.96.lbr  xp_power.lbr
Arduino/Sensor/: Sensor.ino
Arduino/Sensor/Doc/: DigiMesh update.docx  XBee-DM_ArduinoProfile.xml  profile_8073.xml  program.txt
Arduino/SensorIO/: SensorIO.code-workspace  platformio.ini
Arduino/SensorIO/src/: FilteredTemperatureSensor.cpp  FilteredTemperatureSensor.h  SensorDisplay.cpp  SensorDisplay.h  main.cpp
HomeControl/: HomeControl.sln
HomeControl/HomeControl/: HomeControl.csproj  MainActivity.cs  RoomDetail.cs  geofence.cs  packages.config
HomeControl/HomeControl/Comm/: AsyncCloudSocket.cs  CloudSocket.cs  CommModel.cs  FrameReceivedArgs.cs  GpsLocation.cs  HCLogger.cs  ICloudSocketListener.cs  ICommObject.cs  ICommReceiver.cs  JsonSerialiser.cs  LocationInterval.cs  MessageObject.cs  RemoteLogClient.cs  RoomList.cs  RoomTemperature.cs  SetTemperature.cs  TemperatureDown.cs  TemperatureMonitoring.cs  (+1 more)
HomeControl/SharedSimulation/: Derivative.cs  DerivativeIf.cs  RunningAverageFilter.cs  SharedSimulation.csproj
HomeControl/ThermoSimulation/: App.config  MainForm.Designer.cs  MainForm.cs  Program.cs  ThermoSimulation.csproj  ThermostatIf.cs  ThermostatListenerIf.cs  TwoPointThermostat.cs  packages.config
HomeControl/WindowsMonitor/: App.config  DataCleanup.Designer.cs  DataCleanup.cs  GMapMarkerWithLabel.cs  GMapPoint.cs  Item.cs  LocationFilter.cs  LocationViewer.Designer.cs  LocationViewer.cs  LocationViewer.resx  MonitorForm.Designer.cs  MonitorForm.cs  MonitorForm.resx  Program.cs  TemperatureViewer.Designer.cs  TemperatureViewer.cs  WindowsMonitor.csproj  packages.config
HomeControl/WindowsMonitorTest/: LocationFilterTest.cs  WindowsMonitorTest.csproj
LogHost/: LogForm.Designer.cs  LogForm.cs  LogHost.csproj  LogHost.sln  Program.cs  UdpReceiver.cs
LogHost/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Server/: .gitignore  CMakeLists.txt  CreateRoom.sql  CreateSensor.sql  CreateTable.sql  CreateTable2.sql.csv  CreateTable3.sql.csv  CreateTemperature.sql  bootstrap  homecontrol.code-workspace
Server/HomeControlLib/: .cproject  .project  CMakeLists.txt
Server/HomeControlLib/src/Comm/: Client.cpp  Client.h  ClientListenerIf.h  ClientSocket.cpp  ClientSocket.h  ClientSocketIf.h  CommListenerIf.h  CommObjectIf.h  CommServerIf.h  CommUtils.cpp  CommUtils.h  DMComm.cpp  DMComm.h  DMCommIf.h  DMCommListener.h  DMCommListenerIf.h  DMFrameListenerIf.h  DMFrameProcessor.cpp  DMFrameProcessor.h  DMFrameProcessorIf.h  DMMessages.h  GpsLocation.cpp  GpsLocation.h  ObjectFactory.cpp  ObjectFactory.h  Serial.cpp  Serial.h  SerialIf.h  SerialListenerIf.h  Server.cpp  Server.h  ServerSocket.cpp  ServerSocket.h  ServerSocketIf.h  SocketFactory.cpp  SocketFactory.h  SocketFactoryIf.h  SocketListenerIf.h  TemperatureSensors.cpp  TemperatureSensors.h  (+5 more)
Server/HomeControlLib/src/CommObjects/: CommObjectIf.h  GpsLocation.cpp  GpsLocation.h  KeepAlive.cpp  KeepAlive.h  LocationInterval.cpp  LocationInterval.h  MessageObject.cpp  MessageObject.h  ObjectFactory.cpp  RoomList.cpp  RoomList.h  RoomTemperature.cpp  RoomTemperature.h  SetTemperature.cpp  SetTemperature.h  TemperatureDown.cpp  TemperatureDown.h  TemperatureMonitoring.cpp  TemperatureMonitoring.h  TemperatureUp.cpp  TemperatureUp.h
Server/HomeControlLib/src/DAL/: HomeControlDal.cpp  HomeControlDal.h  HomeControlDalIf.h  ObjectWriter.cpp  ObjectWriter.h  TemperatureWriter.cpp  TemperatureWriter.h
Server/HomeControlLib/src/Hw/: Crc8.h  I2C.cpp  I2C.h  I2CIf.h  RelaisDriver.cpp  RelaisDriver.h  WatchDog.cpp  WatchDog.h
Server/HomeControlLib/src/Logic/: CommRouter.cpp  CommRouter.h  Filter.cpp  Filter.h  HeaterControl.cpp  HeaterControl.h  HeaterListenerIf.h  HomeControl.cpp  HomeControl.h  ObjectPrinter.cpp  ObjectPrinter.h  RoomControl.cpp  RoomControl.h  RoomListenerIf.h  SystemClock.cpp  SystemClock.h  SystemClockIf.h  TemperatureFilter.cpp  TemperatureFilter.h  TemperatureListenerIf.h  ThermostatIf.h  ThermostatListenerIf.h  Timer.cpp  Timer.h  TwoPointThermostat.cpp  TwoPointThermostat.h
Server/HomeControlLib/src/Rest/: CppRestServer.cpp  CppRestServer.h  QueryDecode.cpp  QueryDecode.h  RestService.cpp  RestService.h  RestServiceIf.h
Server/HomeControlServer/: .cproject  .project  CMakeLists.txt
Server/HomeControlServer/src/: MainApp.cpp
Server/HomeControlTest/: .cproject  .project  CMakeLists.txt
Server/HomeControlTest/src/: Client.cpp  ClientSocket.cpp  CommObjects.cpp  CommRouterTest.cpp  FrameProcessorTest.cpp  FullTest.cpp  HomeControlDalTest.cpp  LiveTest.cpp  MainTest.cpp  ObjectWriter.cpp  QueryDecodeTest.cpp  RelaisDriverTest.cpp  RoomControlTest.cpp  SerialTest.cpp  Server.cpp  ServerSocket.cpp  TemperatureSensorsTest.cpp  ThermostatSimulationTest.cpp  ThwoPointThermostatTest.cpp  TimerTest.cpp  WatchDogTest.cpp  XbeeTest.cpp
Server/HomeControlTest/testdata/: LivingTemperatuur.csv  LivingTemperatuur2.csv
Server/SQL/: DbSchema_20170823.sql  HC_DB_Client.sql  HC_DB_Location.sql  HC_DB_Locations.sql  HC_DB_Room.sql  HC_DB_TempTemperatures.sql  HC_DB_Temperature.sql  HC_DB_TemperatureSensor.sql  db.sql
Server/build-x86/: toolchain-x86.cmake
Server/libraries/: buildall
Server/libraries/x86/include/glog/: config.h
Server/linux/init.d/: hcserver
TestServer/: AsynchronousSocketListener.cs  GpsLocation.cs  HCClient.cs  ICommListener.cs  MainForm.Designer.cs  MainForm.cs  MessageObject.cs  ObjectFactory.cs  Program.cs  Server.csproj
TestServer/Properties/: AssemblyInfo.cs
(+55 files in other folders)
